--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -6,6 +6,11 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  min-height: 100vh;
+  background: #1A1A1C;
+}
+
 a {
   color: inherit;
   text-decoration: none;
